Fixed summary header vertical alignment

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ header h2 {
     z-index: 99;
     /* white-space: nowrap; */
     opacity: 0.9;
+    border-radius: 0.25em;
 }
 
 #summary.hidden {
@@ -58,14 +59,15 @@ header h2 {
 
 #summary .summary-header {
     display: flex;
-    align-items: start;
+    align-items: baseline;
     justify-content: space-between;
 }
 
 #summary .summary-header h2 {
     margin-block-start: 0;
     margin-block-end: 0.4em;
-    flex-basis: 100%;
+    /* flex-basis: 100%; */
+    cursor: pointer;
 }
 
 #summary .summary-header span {
@@ -76,7 +78,8 @@ header h2 {
     padding: 0.4em;
     user-select: none;
     display: flex;
-    align-items: center;
+    border-radius: 10%;
+    aspect-ratio: 1;
 }
 
 #summary .summary-header span:hover {
@@ -97,7 +100,7 @@ header h2 {
     margin-block-start: 0;
     margin-block-end: 0;
     text-transform: capitalize;
-    width: 30ch;
+    width: 25ch;
 }
 
 #summary li::marker {
